--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1,8 +1,78 @@
-html, body {
-  height: 100%;
+body {
+  font-family: 'Open Sans',sans-serif;
+  font-size: 14px;
+  background-color: #333;
+  color: rgba(255, 255, 255, 0.75);
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+.container {
+  max-width: 970px; }
+
+h1 {
+  font-size: 26px; }
+
+h2 {
+  font-size: 22px; }
+
+h3 {
+  font-size: 18px; }
+
+h4 {
+  font-size: 14px; }
+
+.view {
+  margin: 30px 15px;
+  width: 100%; }
+
+.navbar {
+  margin-top: 30px; }
+  .navbar a {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 22px; }
+  .navbar a:hover {
+    color: rgba(255, 255, 255, 0.75);
+    text-shadow: 0 1px 3px rgba(255, 255, 255, 0.5);
+    font-size: 22px;
+    text-decoration: none; }
+
+.navbar-default {
+  background-color: #333;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.75); }
+
+.navbar-header {
+  margin-top: 10px; }
+
+.navbar-brand {
+  font-size: 26px;
+  color: rgba(255, 255, 255, 0.75); }
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+  color: rgba(255, 255, 255, 0.75);
   background-color: #333; }
 
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); }
+.navbar-default .navbar-nav > li > a {
+  color: rgba(255, 255, 255, 0.75); }
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: rgba(255, 255, 255, 0.75);
+  text-shadow: 0 1px 3px rgba(255, 255, 255, 0.5);
+  font-size: 22px;
+  text-decoration: none; }
+
+.navbar-right {
+  margin-right: 15px; }
+
+.home {
+  width: 100%; }
+  .home .console {
+    width: 100%;
+    min-height: 300px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin-top: 15px;
+    padding: 0 10px; }
+    .home .console span {
+      color: #47d147;
+      margin-top: 5px;
+      text-shadow: none; }
