--- a/src/main/resources/angular/views/home.html
+++ b/src/main/resources/angular/views/home.html
@@ -1,14 +1,20 @@
 <div class="home">
 	<h2><i class="fa fa-arrow-right" aria-hidden="true"></i> Explorando Marte</h2>
 	<p>Um conjunto de sondas foi enviado pela NASA à Marte e irá pousar num planalto. Esse planalto, que curiosamente é retangular, deve ser explorado pelas sondas para que suas câmera embutidas consigam ter uma visão completa da área e enviar as imagens de volta para a Terra.</p>
-	<h3>Sondas enviadas a Marte:</h3>
+	<h3>Sondas enviadas à Marte:</h3>
 	<select id="sondas" class="form-control" 
 		ng-options="sonda.nome for sonda in ctrl.sondas track by sonda.lancamento"
       	ng-model="ctrl.model.sonda">
       	<option selected="selected" value="">Selecione uma sanda...</option>
      </select>
      
-     <div class="console" ng-if="ctrl.model.sonda">
+     <div class="console">
      	<span>Teste do Console</span>
+     </div>
+     
+     <div class="acoes">
+     	<a class="btn btn-primary">Virar a Esquerda</a>
+     	<a class="btn btn-primary">Virar a Direita</a>
+     	<a class="btn btn-primary">Mover para Frente</a>
      </div>
 </div>
