--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -66,7 +66,7 @@ h4 {
   width: 100%; }
   .home .console {
     width: 100%;
-    min-height: 300px;
+    min-height: 250px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -76,3 +76,34 @@ h4 {
       color: #47d147;
       margin-top: 5px;
       text-shadow: none; }
+  .home .acoes {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px; }
+    .home .acoes .btn-primary {
+      display: inline-block;
+      background-color: #fff;
+      border: 1px solid #fff;
+      color: #333;
+      min-width: 200px;
+      margin-left: 10px;
+      text-shadow: none;
+      font-weight: 500; }
+
+.footer {
+  width: 100%;
+  border-top: 1px solid rgba(255, 255, 255, 0.75);
+  min-height: 150px;
+  text-align: center; }
+  .footer p {
+    margin: 0;
+    padding: 0; }
+  .footer .copyright {
+    margin-top: 15px;
+    font-size: 18px; }
+  .footer ul {
+    margin-top: 10px;
+    font-size: 40px; }
+    .footer ul li.dev {
+      display: inline-block;
+      width: 70px; }
