--- a/src/main/resources/static/assets/css/sass/home.scss
+++ b/src/main/resources/static/assets/css/sass/home.scss
@@ -3,17 +3,20 @@
 
   .console {
     width: 100%;
-    min-height: 250px;
+    height: 250px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
     margin-top: 15px;
     padding: 0 10px;
+    overflow-y: scroll;
 
-    span{
+    p{
+      margin: 0;
+      padding: 0;
       color: #47d147;
-       margin-top: 5px;
-       text-shadow: none;
+      margin-top: 5px;
+      text-shadow: none;
     }
   }
 
