--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -66,13 +66,16 @@ h4 {
   width: 100%; }
   .home .console {
     width: 100%;
-    min-height: 250px;
+    height: 250px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
     margin-top: 15px;
-    padding: 0 10px; }
-    .home .console span {
+    padding: 0 10px;
+    overflow-y: scroll; }
+    .home .console p {
+      margin: 0;
+      padding: 0;
       color: #47d147;
       margin-top: 5px;
       text-shadow: none; }
