--- a/src/main/resources/angular/views/home.html
+++ b/src/main/resources/angular/views/home.html
@@ -17,6 +17,6 @@
      	<a class="btn btn-primary" ng-click="ctrl.virarParaEsquerda()" ng-if="ctrl.model.sonda">Virar a Esquerda</a>
      	<a class="btn btn-primary" ng-click="ctrl.virarParaDireita()" ng-if="ctrl.model.sonda">Virar a Direita</a>
      	<a class="btn btn-primary" ng-click="ctrl.moverParaFrente()" ng-if="ctrl.model.sonda">Mover para Frente</a>
-     	<a class="btn btn-primary" ng-click="ctrl.moverParaFrente()" ng-if="ctrl.model.sonda">Enviar Nova Sonda</a>
+     	<a class="btn btn-primary" ng-click="ctrl.enviarNovaSonda()" ng-if="ctrl.model.sonda">Enviar Nova Sonda</a>
      </div>
 </div>
