--- a/src/main/resources/angular/views/desafio.html
+++ b/src/main/resources/angular/views/desafio.html
@@ -22,6 +22,9 @@
 	<h3>Para obter um access_token e refresh_token manualmente</h3>
 	<p>curl -X POST -k -vu marsexpress:123e4567-e89b-12d3-a456-426655440000 http://localhost:8080/oauth/token -H "Accept: application/json" -d "username=rudolfoborges@nasa.com&password=1234&client_id=marsexpress&client_secret=123e4567-e89b-12d3-a456-426655440000&grant_type=password"</p>
 	
+	<h3>Baixar os módulos Node para utilizar o Gulp</h3>
+	<p>mpn install</p>
+	
 	<h3>Para rodar o projeto na porta 8080</h3>
 	<p>Com o Java 8 -> mvn spring-boot:run</p>
 	
