--- a/src/main/resources/angular/views/home.html
+++ b/src/main/resources/angular/views/home.html
@@ -3,7 +3,7 @@
 	<p>Um conjunto de sondas foi enviado pela NASA à Marte e irá pousar num planalto. Esse planalto, que curiosamente é retangular, deve ser explorado pelas sondas para que suas câmera embutidas consigam ter uma visão completa da área e enviar as imagens de volta para a Terra.</p>
 	<h3>Sondas enviadas à Marte:</h3>
 	<select id="sondas" class="form-control" 
-		ng-options="sonda.nome for sonda in ctrl.sondas track by sonda.lancamento"
+		ng-options="sonda.nome for sonda in ctrl.nasa.sondas track by sonda.lancamento"
       	ng-model="ctrl.model.sonda">
       	<option selected="selected" value="">Selecione uma sanda...</option>
      </select>
