--- a/src/main/resources/angular/views/desafio.html
+++ b/src/main/resources/angular/views/desafio.html
@@ -1,6 +1,6 @@
 <div class="desafio">
 	
-	<h1>Teste de programação parte do processo seletivo do Elo7</h1>
+	<h1>Teste de programação</h1>
 	
 	<p>No desafio foi utilizada a linguagem <b>Java versão 1.8</b> na estrutura de um projeto Spring Boot Maven</p>
 	
@@ -24,8 +24,8 @@
 	<ul>
 		<li>1 - cd project_home</li>
 		<li>2 - mvn clean package</li>
-		<li>3 - docker build -t elo7/rudolfoborges .</li>
-		<li>4 - docker run -t -p 8080:8080 --name elo7 elo7/rudolfoborges</li>
+		<li>3 - docker build -t mars/rudolfoborges .</li>
+		<li>4 - docker run -t -p 8080:8080 --name mars mars/rudolfoborges</li>
 	</ul>
 	
 	<h2>Comandos:</h2>
